page404 overflow fixed | footer removed from chat page

--- a/client/src/components/page404/Page404.module.css
+++ b/client/src/components/page404/Page404.module.css
@@ -1,6 +1,6 @@
 .outerContainer {
   background-color: white;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
 }
 
